--- a/oneDimLoops.html
+++ b/oneDimLoops.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-  <div class="bg">
+  <div class="bg-oneAndHalf">
 
     <div class="container">
       <nav role='navigation'>
@@ -72,11 +72,11 @@
 
   אם נסתכל על שורת הקוד ה2 נוכל לראות שלושה דברים:
   <br>
-  1.	תנאי התחלה (i=0) -> מאיפה להתחיל את הספירה.
+  1.	תנאי התחלה <span dir="ltr">(i=0) </span>-> מאיפה להתחיל את הספירה.
   <br>
   2.	התנאי שדואג לכך שכל עוד הוא נכון נמשיך להיכנס ללולאה (i&lt;5).
   <br>
-  3.	השינוי בין כל ריצה לריצה ( (i++ -> מגדיל ב1 את הערך של i.
+  3.	השינוי בין כל ריצה לריצה <span dir="ltr">(i++)</span>-> מגדיל ב1 את הערך של i.
   <br>
   אנו נוכל להשתמש בלולאה בכל מקום שנרצה בקוד כל עוד יש חוקיות מסוימת בקוד, כלומר, בדוגמא שלעיל החוקיות היא הדפסה של מספרים עוקבים.
   <br><br>
