--- a/printAndScan.html
+++ b/printAndScan.html
@@ -70,8 +70,8 @@
     <span dir="ltr">printf("%left",right)</span> = פקודת ההדפסה שלנו – במקרה שלנו אנחנו רושמים בצד שמאל % ואת סוג המשתנה שאותו אנו מדפיסים ובצד
     ימין אנו רושמים את שם המשתנה שאותו אנו מדפיסים.
     <br>
-    לדוגמה:<!-- code 1 -->
-    <br><br><br><br><br><br><br><br>
+    לדוגמה:
+    <br><br><br><br><br><br>
     printf = הפקודה שאנו מבצעים
     <br>
     "%d" = סוג המשתנה שאותו אנו מדפיסים (במקרה שלנו אינט)
@@ -103,13 +103,20 @@
 
       <!--TABLE-->
       מה רושמים? מה מדפיסים?
-      %d int
-      %c char
-      %f float
-      %lf double
-      %s String
-      %u Unsigned int
-      %ld long
+      <br>
+     <span dir="ltr"> %d -> int</span>
+     <br>
+    <span dir="ltr"> %c -> char</span>
+    <br> 
+    <span dir="ltr"> %f -> float</span>
+    <br>
+    <span dir="ltr"> %lf -> double</span>
+    <br> 
+    <span dir="ltr"> %s -> String</span>
+    <br> 
+    <span dir="ltr"> %u -> Unsigned int</span>
+    <br> 
+    <span dir="ltr"> %ld -> long</span>
       <!--END TABLE-->
 
   </p>
