--- a/mathOperator.html
+++ b/mathOperator.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-  <div class="bg-oneAndHalf">
+  <div class="bg-two">
 
     <div class="container">
       <nav role='navigation'>
@@ -94,7 +94,7 @@
     <br>
     באותה הדרך אנו נעשה קודם כל :
     <br>
-    12/4 = 3 .0
+    12/4 = 3.0
     <br>
     ניקח את ה0/4 שיש לנו ובעצם שארית החלוקה שלנו היא 0.
     <br>
