--- a/twoDimLoops.html
+++ b/twoDimLoops.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-  <div class="bg-oneAndHalf">
+  <div class="bg-two">
 
     <div class="container">
       <nav role='navigation'>
@@ -71,15 +71,15 @@
     נניח שאנו רוצים להדפיס משולש שעשוי מכוכביות:
     <br>
     במקום לרשום:
-    <br><br><br><br><br><br><br><br><br><br><br>
-    <br>
+    <br><br><br><br><br><br><br><br><br><br>
+    
     נוכל לרשום:
-    <br><br><br><br><br><br><br><br><br><br><br><br><br>
+    <br><br><br><br><br><br><br><br><br><br><br><br><br><br>
     
     הסבר:
     <br>
     בדוגמא זו יש לנו לולאה בתוך לולאה,
-    הלולאה הראשונה שלנו היא לולאה שרצה מi עד ל 5. בתוך הלולאה הראשונה שלנו קיימת עוד לולאה שרצה כל פעם מJ עד לi
+    הלולאה הראשונה שלנו היא לולאה שרצה מi עד ל 5. בתוך הלולאה הראשונה שלנו קיימת עוד לולאה שרצה כל פעם מj עד לi
     הנוכחי. בתול הלולאה השנייה שלנו אנו מדפיסים כוכבית אחת בכל איטרציה (ריצה). בכל פעם שאנו מסיימים את הלולאה השנייה
     אנו חוזרים לקוד שרץ בלולאה הראשונה ומבצעים ירידת שורה (כך אנו חוזרים שהמשך הקוד בלולאה הראשונה).
   </p>
