--- a/arrays.html
+++ b/arrays.html
@@ -9,14 +9,15 @@
   <link rel="icon" type="image/x-icon" href="assest/favicon.ico" />
   <link rel="stylesheet" href="css/styles.css" />
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link rel="stylesheet" href="css/code.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
+  <link rel="stylesheet" href="css/code.css" />
 </head>
 
 <body>
-  <div class="bg-two">
+  <div class="bg-twoAndHalf">
     <div class="container">
-      <nav role='navigation'>
+      <!--Side bar-->
+      <nav role="navigation">
         <div id="menuToggle">
           <input type="checkbox" />
           <span></span>
@@ -32,40 +33,47 @@
             <a href="oneDimLoops.html" class="w3-bar-item w3-button">לולאות</a>
             <a href="twoDimLoops.html" class="w3-bar-item w3-button">לולאות דו מימדיות</a>
             <a href="casting.html" class="w3-bar-item w3-button">קסטינג </a>
+            <a href="sizeOf.html" class="w3-bar-item w3-button">סייז אוף </a>
             <a href="typeDef.html" class="w3-bar-item w3-button">טייפ דפ</a>
             <a href="functions.html" class="w3-bar-item w3-button">פונקציות</a>
-            <a href="recursion.html" class="w3-bar-item w3-button">רקורסיות </a>
+            <a href="recursion.html" class="w3-bar-item w3-button">רקורסיות</a>
             <a href="pointers.html" class="w3-bar-item w3-button">מצביעים</a>
+            <a href="doublePointer.html" class="w3-bar-item w3-button">מצביע כפול</a>
             <a href="arrays.html" class="w3-bar-item w3-button">מערכים</a>
             <a href="dinArrays.html" class="w3-bar-item w3-button">מערכים דינאמיים</a>
             <a href="string.html" class="w3-bar-item w3-button">מחרוזות</a>
             <a href="binSearch.html" class="w3-bar-item w3-button">חיפוש בינארי</a>
-            <a href="twoDimLoops.html" class="w3-bar-item w3-button">מערכים דו ממדיים</a>
-            <a href="" class="w3-bar-item w3-button">מיונים הסבר כללי</a>
+            <a href="twoDimArrays.html" class="w3-bar-item w3-button">מערכים דו ממדיים</a>
+            <a href="bubbleSort.html" class="w3-bar-item w3-button">מיון בועות</a>
+            <a href="selectionSort.html" class="w3-bar-item w3-button">מיון בחירה</a>
+            <a href="insertionSort.html" class="w3-bar-item w3-button">מיון הכנסה</a>
+            <a href="quickSort.html" class="w3-bar-item w3-button">מיון מהיר</a>
+            <a href="mergeSort.html" class="w3-bar-item w3-button">מיון מיזוג</a>
           </ul>
         </div>
       </nav>
-
     </div>
+    <!--End of Side bar-->
 
     <h1 class="top-left">Learning C</h1>
-
   </div>
 
   <h2 class="top-right-head">מערכים</h2>
 
-  <p class=top-right>
-
+  <p class="top-right">
     בשביל מה אנחנו צריכים מערך?
-    <br>
-    מערך הוא מבנה נתונים שביכולתו לאסוף הרבה מאוד נתונים מאותו הסוג באותו המקום.
-    <br>
+    <br />
+    מערך הוא מבנה נתונים שביכולתו לאסוף הרבה מאוד נתונים מאותו הסוג באותו
+    המקום.
+    <br />
     נראה דוגמה למתי נוח לנו לעבוד עם מערך:
-    <br>
-    עלינו ליצור תוכנה שבה יש כיתה שלמה של סטודנטים שמהם אנחנו קולטים ציון ומחזירים ממוצע כיתתי.
-    <br>
-    כדי לעשות זאת עלינו ליצור כ-30 תלמידים, לעשות קליטה של כ-30 ציונים ולאחר מכן לחשב את הממוצע ולהחזיר אותו:
-    <br>
+    <br />
+    עלינו ליצור תוכנה שבה יש כיתה שלמה של סטודנטים שמהם אנחנו קולטים ציון
+    ומחזירים ממוצע כיתתי.
+    <br />
+    כדי לעשות זאת עלינו ליצור כ-30 תלמידים, לעשות קליטה של כ-30 ציונים ולאחר
+    מכן לחשב את הממוצע ולהחזיר אותו:
+    <br />
     <!--CODE
       double return_sum()
       {
@@ -75,12 +83,13 @@
       return sum;
       }
       END CODE-->
-    <br>
-    כרגע קיצרנו קצת את הדוגמה אבל כמובן שכדי לעשות זאת עלינו באמת לרשום 30 משתנים, לבצע 30 קליטות ולאחר מכן לחשב את
-    הממוצע ולהחזירו, מדובר בהרבה מאוד קוד שממש חוזר על עצמו.
-    <br>
+    <br />
+    כרגע קיצרנו קצת את הדוגמה אבל כמובן שכדי לעשות זאת עלינו באמת לרשום 30
+    משתנים, לבצע 30 קליטות ולאחר מכן לחשב את הממוצע ולהחזירו, מדובר בהרבה מאוד
+    קוד שממש חוזר על עצמו.
+    <br />
     ניתן לעשות זאת ביותר קלות ע"י שימוש במערך בצורה הבאה:
-    <br>
+    <br />
     <!--CODE
       double return_sum()
       {
@@ -93,71 +102,72 @@
         return (sum/30);
       }
       END CODE-->
-    <br>
+    <br />
     בדוגמה שפה השגנו בדיוק את אותה התוצאה, עם הרבה פחות קוד והרבה יותר סדר.
-    <br>
-    <br>
+    <br />
+    <br />
     דברים שחשוב לציין בנוגע למערכים בשפת סי:
-    <br>
-    1. מערך בגודל 5 (שלא אמרנו מה גודלו במהלך ההצהרה אלא רק הכנסנו את האיברים שלו).
-    int arr[] = {1,2,3,4,5};
-    <br>
-    2. מערך בגודל 3 שבו הכנסנו ערכים לשני האיברים הראשונים, באיבר השלישי קיים ערך שנקרא "ערך זבל" – שמשמעותו אומרת שזה
-    ערך שאין להתייחס אליו ללא אתחול.
+    <br />
+    1. מערך בגודל 5 (שלא אמרנו מה גודלו במהלך ההצהרה אלא רק הכנסנו את האיברים
+    שלו). int arr[] = {1,2,3,4,5};
+    <br />
+    2. מערך בגודל 3 שבו הכנסנו ערכים לשני האיברים הראשונים, באיבר השלישי קיים
+    ערך שנקרא "ערך זבל" – שמשמעותו אומרת שזה ערך שאין להתייחס אליו ללא אתחול.
     double arr[3] = {1,2};
-    <br>
-    3. מערך בגודל 20 שכל אבריו מאופסים.
-    double zeroArr[20] = {0};
-    <br>
-    <br>
+    <br />
+    3. מערך בגודל 20 שכל אבריו מאופסים. double zeroArr[20] = {0};
+    <br />
+    <br />
     איך ניגשים לאיבר במערך?
-    <br>
-    לאחר יצירת המערך אנו נעבוד בעזרת מספר / משתנה שישמש אותנו כאינדקס המצביע על האזור במערך שעליו אנחנו רוצים לעבוד.
-    <br>
-    הספירה שלנו במערכים (ובתכנות באופן כללי) מתחיל מ-0 , כך שהאיבר במקום הראשון במערך שלנו יקרא האיבר במקום ה0.
-    <br>
+    <br />
+    לאחר יצירת המערך אנו נעבוד בעזרת מספר / משתנה שישמש אותנו כאינדקס המצביע
+    על האזור במערך שעליו אנחנו רוצים לעבוד.
+    <br />
+    הספירה שלנו במערכים (ובתכנות באופן כללי) מתחיל מ-0 , כך שהאיבר במקום
+    הראשון במערך שלנו יקרא האיבר במקום ה0.
+    <br />
     דוגמה לכך:
-    <br>
-    אם נרצה לשנות לאיבר האחרון במערך בין חמשת האיברים הבא את הערך נעשה זאת בצורה הבאה:
-    <br>
+    <br />
+    אם נרצה לשנות לאיבר האחרון במערך בין חמשת האיברים הבא את הערך נעשה זאת
+    בצורה הבאה:
+    <br />
 
     <!--CODE
       int arr[5] = {1,2,3,4,5};  // Before
       arr[5] = 8; 
       // After, the array will look like that: {1,2,3,4,8}
       END CODE-->
-    <br>
+    <br />
     ניתן גם לגשת בצורה הבאה:
-    <br>
+    <br />
     <!--CODE
       int arr[5] = {1,2,3,4,5}; // before
       *(arr+4) = 8;
       // After, the array will look like that: {1,2,3,4,8}
       END CODE-->
-    <br>
-    בצורה הראשונה ניגשנו לאיבר ה5 בתוך המערך בעזרת הסוגריים המרובעים ושינינו את הערך שלו.
-    בצורה השנייה לקחנו את המערך (שמצביע תמיד על האיבר הראשון) והלכנו ארבעה צעדים קדימה לסופו ושם שינינו את הערך (כלומר
-    1+4 = 5 , ניגשנו לאיבר ה5 במערך).
-    <br>
-    <br>
+    <br />
+    בצורה הראשונה ניגשנו לאיבר ה5 בתוך המערך בעזרת הסוגריים המרובעים ושינינו
+    את הערך שלו. בצורה השנייה לקחנו את המערך (שמצביע תמיד על האיבר הראשון)
+    והלכנו ארבעה צעדים קדימה לסופו ושם שינינו את הערך (כלומר 1+4 = 5 , ניגשנו
+    לאיבר ה5 במערך).
+    <br />
+    <br />
     יתרונות במערך סטטי:
-    <br>
-    1. עשוי לחסוך לנו הרבה מאוד זמן ביצירת משתנים (למשל כמו בדוגמה הראשונה , 30 משתנים בעלי אותו התפקיד – נכנסים טוב
-    בתוך מערך יחיד בגודל 30).
-    <br>
+    <br />
+    1. עשוי לחסוך לנו הרבה מאוד זמן ביצירת משתנים (למשל כמו בדוגמה הראשונה ,
+    30 משתנים בעלי אותו התפקיד – נכנסים טוב בתוך מערך יחיד בגודל 30).
+    <br />
     2. הופך את הקוד לקריא יותר (משתנה אחד , קצר מ30 משתנים)
-    <br>
+    <br />
     3. . הגישה אליו מאוד נוחה , רק צריך לגשת באמצעות אינדקס מספרי
-    <br>
-    <br>
+    <br />
+    <br />
     חסרונות:
-    <br>
-    1. מגדירים פעם אחת את הגודל, לא ניתן לשנות אותו לאחר מכן (כלומר אם היו לנו 30 תלמידים בכיתה ולפתע הכיתה גדלה ל31 אין
-    לנו אופציה להשתמש במערך הקיים).
-    <br>
-
+    <br />
+    1. מגדירים פעם אחת את הגודל, לא ניתן לשנות אותו לאחר מכן (כלומר אם היו לנו
+    30 תלמידים בכיתה ולפתע הכיתה גדלה ל31 אין לנו אופציה להשתמש במערך הקיים).
+    <br />
   </p>
-
 </body>
 
 </html>
