--- a/insertionSort.html
+++ b/insertionSort.html
@@ -5,17 +5,16 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <title>Learning C TypeDef</title>
+  <title>Learning C HomePage</title>
   <link rel="icon" type="image/x-icon" href="assest/favicon.ico" />
   <link rel="stylesheet" href="css/styles.css" />
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link rel="stylesheet" href="css/code.css">
+
 </head>
 
 <body>
-  <div class="bg-two">
-
+  <div class="bg">
     <div class="container">
       <!--Side bar-->
       <nav role="navigation">
@@ -55,72 +54,12 @@
       </nav>
       <!--End of Side bar-->
 
+    <h1 class="top-left">Learning C</h1>
 
-    </div>
+    <h2 class="top-right-head">NULL</h2>
 
-  </div>
-  
-  <h1 class="top-left">Learning C</h1>
+    <p class="top-right">
 
-  </div>
-
-  <h2 class="top-right-head">typedef & define</h2>
-
-  <p class=top-right>
-
-    שפת C נותנת לנו אפשרות להגדיר לפונקציה/משתנה/רצף מילים/מילה שם נוסף אשר תפקידו הוא להפוך את הטקסט להיות יותר קריא.
-    כלומר, נגיד ואנחנו רוצים להשתמש במשתנה unsigned int (רק מספרים חיוביים ושלמים), אנו נוכל להגדיר typedef של unsigned
-    int על ידי שם אחר, לדוגמא positive_only.
-    <br>
-    כעת כאשר אנו נצטרך להשתמש ב unsigned int אנו נוכל לרשום positive_only במקום ובכך לגרום לקוד להיות יותר קריא.
-    <br>
-    באופן דומה אנו יכולים להגדיר גם רצף של מילים (או מילה) או פונקציות על ידי שמות שאנחנו נגדיר.
-    <br>
-    לדוגמא, אנו נוכל להגדיר את 1 להיות ODD ואת 0 להיות EVEN על ידי הגדרת define.
-    <br>
-    הסינטקס של typedef & define:
-    <br>
-    <br>
-
-    <!--CODE CODE
-    typedef unsigned int positive_only;
-    
-    define ODD 1
-
-    END CODE-->
-
-    <br>
-    אדום-> מסמן לקומפיילר שיש פה "הגדרה חדשה".
-    <br>
-    כחול-> למה המחשב מתייחס.
-    <br>
-    כתום-> מה המתכנת רואה.
-    <br>
-    חשוב לזכור: typedef זה רק למשתנים ומבני נתונים שונים, ואילו ל define אין הגבלה. נהוג לרשום define ו typedef בתחילת
-    הקוד (אחרי הinclude 'ים).
-    <br>
-    שימוש בקוד:
-    <br>
-
-    <!--CODE
-    #include <stdio.h>
-      #define ODD 1
-      #define EVEN 0
-      typedef unsigned int positive_only;
-      void main()
-      {
-      positive_only X;
-      printf("please enter number");
-      scanf_s("%u",&X);
-      if (X%2 == ODD){
-      printf("the number is odd");
-      {
-      if (x%2 == EVEN){
-      printf("the number is even");
-      }
-    END CODE-->
-
-  </p>
 
 
 </body>
