--- a/printAndScan.html
+++ b/printAndScan.html
@@ -18,7 +18,8 @@
   <div class="bg-two">
 
     <div class="container">
-      <nav role='navigation'>
+      <!--Side bar-->
+      <nav role="navigation">
         <div id="menuToggle">
           <input type="checkbox" />
           <span></span>
@@ -34,19 +35,26 @@
             <a href="oneDimLoops.html" class="w3-bar-item w3-button">לולאות</a>
             <a href="twoDimLoops.html" class="w3-bar-item w3-button">לולאות דו מימדיות</a>
             <a href="casting.html" class="w3-bar-item w3-button">קסטינג </a>
+            <a href="sizeOf.html" class="w3-bar-item w3-button">סייז אוף </a>
             <a href="typeDef.html" class="w3-bar-item w3-button">טייפ דפ</a>
             <a href="functions.html" class="w3-bar-item w3-button">פונקציות</a>
-            <a href="recursion.html" class="w3-bar-item w3-button">רקורסיות </a>
+            <a href="recursion.html" class="w3-bar-item w3-button">רקורסיות</a>
             <a href="pointers.html" class="w3-bar-item w3-button">מצביעים</a>
+            <a href="doublePointer.html" class="w3-bar-item w3-button">מצביע כפול</a>
             <a href="arrays.html" class="w3-bar-item w3-button">מערכים</a>
             <a href="dinArrays.html" class="w3-bar-item w3-button">מערכים דינאמיים</a>
             <a href="string.html" class="w3-bar-item w3-button">מחרוזות</a>
             <a href="binSearch.html" class="w3-bar-item w3-button">חיפוש בינארי</a>
-            <a href="twoDimLoops.html" class="w3-bar-item w3-button">מערכים דו ממדיים</a>
-            <a href="" class="w3-bar-item w3-button">מיונים הסבר כללי</a>
+            <a href="twoDimArrays.html" class="w3-bar-item w3-button">מערכים דו ממדיים</a>
+            <a href="bubbleSort.html" class="w3-bar-item w3-button">מיון בועות</a>
+            <a href="selectionSort.html" class="w3-bar-item w3-button">מיון בחירה</a>
+            <a href="insertionSort.html" class="w3-bar-item w3-button">מיון הכנסה</a>
+            <a href="quickSort.html" class="w3-bar-item w3-button">מיון מהיר</a>
+            <a href="mergeSort.html" class="w3-bar-item w3-button">מיון מיזוג</a>
           </ul>
         </div>
       </nav>
+      <!--End of Side bar-->
 
     </div>
 
