--- a/quickSort.html
+++ b/quickSort.html
@@ -5,23 +5,21 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <title>Learning C FirstProgram</title>
+  <title>Learning C HomePage</title>
   <link rel="icon" type="image/x-icon" href="assest/favicon.ico" />
   <link rel="stylesheet" href="css/styles.css" />
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link rel="stylesheet" href="css/firstprogram-style.css">
-  <link rel="stylesheet" href="css/code.css">
-  <script src="js/code.js"></script>
+
 </head>
 
 <body>
   <div class="bg">
-
     <div class="container">
       <!--Side bar-->
-      <nav role="navigation">
+      <nav role='navigation'>
         <div id="menuToggle">
+
           <input type="checkbox" />
           <span></span>
           <span></span>
@@ -36,10 +34,9 @@
             <a href="oneDimLoops.html" class="w3-bar-item w3-button">לולאות</a>
             <a href="twoDimLoops.html" class="w3-bar-item w3-button">לולאות דו מימדיות</a>
             <a href="casting.html" class="w3-bar-item w3-button">קסטינג </a>
-            <a href="sizeOf.html" class="w3-bar-item w3-button">סייז אוף </a>
             <a href="typeDef.html" class="w3-bar-item w3-button">טייפ דפ</a>
             <a href="functions.html" class="w3-bar-item w3-button">פונקציות</a>
-            <a href="recursion.html" class="w3-bar-item w3-button">רקורסיות</a>
+            <a href="recursion.html" class="w3-bar-item w3-button">רקורסיות </a>
             <a href="pointers.html" class="w3-bar-item w3-button">מצביעים</a>
             <a href="doublePointer.html" class="w3-bar-item w3-button">מצביע כפול</a>
             <a href="arrays.html" class="w3-bar-item w3-button">מערכים</a>
@@ -47,54 +44,23 @@
             <a href="string.html" class="w3-bar-item w3-button">מחרוזות</a>
             <a href="binSearch.html" class="w3-bar-item w3-button">חיפוש בינארי</a>
             <a href="twoDimArrays.html" class="w3-bar-item w3-button">מערכים דו ממדיים</a>
-            <a href="bubbleSort.html" class="w3-bar-item w3-button">מיון בועות</a>
-            <a href="selectionSort.html" class="w3-bar-item w3-button">מיון בחירה</a>
-            <a href="insertionSort.html" class="w3-bar-item w3-button">מיון הכנסה</a>
-            <a href="quickSort.html" class="w3-bar-item w3-button">מיון מהיר</a>
-            <a href="mergeSort.html" class="w3-bar-item w3-button">מיון מיזוג</a>
+            <a href="bubbleSort.html" class="w3-bar-item w3-button">מיון בועות </a>
+            <a href="selectionSort.html" class="w3-bar-item w3-button">מיון בחירה </a>
+            <a href="insertionSort.html" class="w3-bar-item w3-button">מיון הכנסה </a>
+            <a href="quickSort.html" class="w3-bar-item w3-button">מיון מהיר </a>
+            <a href="mergeSort.html" class="w3-bar-item w3-button">מיון מיזוג </a>
           </ul>
         </div>
       </nav>
-      <!--End of Side bar-->
-
-
     </div>
+    <!--End of Side bar-->
 
-  </div>
+    <h1 class="top-left">Learning C</h1>
 
-  <h1 class="top-left">Learning C</h1>
+    <h2 class="top-right-head">NULL</h2>
 
+    <p class="top-right">
 
-  <figure id="code-1">
-
-    <figcaption id="example1-caption">CODE:</figcaption>
-    <pre aria-describedby="example1-description" aria-labelledby="example1-caption" class="line-numbers"><div aria-hidden="true"><span></span><span></span><span></span><span></span><span></span></div><code contenteditable="true" tabindex="0" spellcheck="false"><i>#include</i> <u>&lt;stdio.io&gt;</u>
-<b>void</b> main()
-{
-  printf(<u>"Hello World!"</u>);
-}
-      </code></pre>
-  </figure>
-
-  <h1 class="top-right-head">התוכנית הראשונה שלנו</h1>
-
-  <p class="top-right">
-
-    בתוכנית זו נלמד איך מדפיסים למסך  <span dir="ltr">hello world:</span>
-    <br>
-    include = פעולה שאומרת בעצם איזה ספרייה לכלול בתוך התוכנית (במקרה שלנו את הספרייה הכללית)
-    <br>
-    stdio.h = הספרייה הכללית (נמצאת בכל תוכנית שלנו)
-    <br>
-    <span dir="ltr">void main()</span> = התוכנית הראשית שלנו – כל הקוד שירוץ בתוכנית שלנו יתחם על ידי סוגריים מסולסלים
-    <br>
-    <span dir="ltr">printf("")</span> = פעולת הדפסה בסיסית – נרשום את מה שאנו רוצים להדפיס בתוך הגרשיים שבתוך הסוגריים.
-    
-
-  </p>
-
-
-  </div>
 
 
 </body>
