--- a/insertionSort.html
+++ b/insertionSort.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-  <div class="bg">
+  <div class="bg-five">
     <div class="container">
       <!--Side bar-->
       <nav role="navigation">
@@ -56,12 +56,130 @@
 
     <h1 class="top-left">Learning C</h1>
 
-    <h2 class="top-right-head">NULL</h2>
+    <h2 class="top-right-head">מיון הכנסה</h2>
 
     <p class="top-right">
+      מיון הכנסה נחשב למיון "מבוסס השוואות" והוא עובד בצורה הבאה.
+      <br>
+      <br>
+      ראשית, אנו מתחילים מתא מספר אחד במערך (כלומר התא השני – כפי שזכור לנו הספירה בתכנות מתבצעת לעיתים קרובות מאוד מ0).
+      אנו מכניסים את הערך שבתוך התא אל תוך משתנה עזר שנקרא לו temp ולאחר מכן נתחיל לבצע השוואה בין המשתנה temp לבין כל האיברים שנמצאים לפני האיבר הנוכחי שבו אנו נמצאים (כלומר אם עכשיו אנחנו נמצאים בתא j אז אנחנו נבצע את הבדיקות מתא j-1 עד לתא 0 כולל).
+      אנו נשתמש כאן ב2 אינדקסיים האחד הוא  j שהוא מציין את התא הנוכחי שעליו נמצאים ואינדקס i שתמיד יתחיל מהתא j-1.
+      <br>
+      <br>
+      כאשר אנו עושים את ההשוואה, אם האיבר בתא i-1 גדול יותר מהערך שבתוך המשתנה x אז אנחנו לוקחים את הערך הזה (שגדול יותר מהערך שבתוך המתשנה temp שלנו ) ומכניסים אותו לתא i+1 וממשיכים בבדיקות עד שנעבור את תא מספר אפס או עד שאנחנו נגיע לתא שהערך שבתוכו קטן יותר מהערך שבתוך משתנה temp. 
+      <br>
+      <br>
+      כעת נראה איך מתבצע התהליך:
+      <br>
+      המערך ההתחלתי שלנו יכול למשל להיראות כך:
+      <br>
+      <img src="assest/tableForInsertionSort/1.png" alt="">
+      <br>
+      משתנה העזר שלנו temp יכיל כעת את הערך שנמצא בתא מספר 1 במערך שהוא המספר 7.
+      כעת אנחנו מתחילים לבצע את ההשוואה בין הערכים מתא מספר 0 כלפי מטה. 
+      בגלל ש 7 גדול מ 2 אז אנחנו יודעים בוודאות שכל האיברים הלאה יהיו קטנים יותר מ 7 והם ממוינים לכן אי צורך לשינוי.
+      <br>
+      <img src="assest/tableForInsertionSort/2.png" alt=""><img src="assest/tableForInsertionSort/3.png" alt="">
+      <br>
+      <br>
+      <br>
+      כעת אנו עוברים ל תא מספר 2 ומכניסים את הערך שלו 4 למשתנה temp ומתחילים השוואות אל מול התאים מצד שמאל של 4.
+משווים ראשית ל תא מספר 1 ורואים ש 7 גדול מ 4.  
+      <br>
+      <img src="assest/tableForInsertionSort/4.png" alt=""><img src="assest/tableForInsertionSort/5.png" alt="">
+      <br>
+      לכן נכניס 7 לתא מספר 2.
+      בשלב זה תא מספר 1 נשאר ללא שינוי.
+      המערך שלנו יראה כך : 	
+      <br>
+      <img src="assest/tableForInsertionSort/6.png" alt="">
+      <br>
+      <br>
+      עכשיו אנחנו עושים השוואה בין תא מספר 0 למשתנה ה temp ואנחנו רואים ש4  גדול יותר מ 2.
+      <br>
+      <img src="assest/tableForInsertionSort/7.png" alt=""><img src="assest/tableForInsertionSort/5.png" alt="">
+      <br>
+      לכן אנחנו עוצרים כאן את הבדיקות ו4 יכנס לתוך תא מספר 1 (למה תא מספר 1 ?  חשוב לזכור שאנחנו השתמשנו כאן ב 2 אינדקסים i ו j האינדקס i תמיד יהיה שווה ל j-1 וכאשר אנחנו הגענו למצב שהערך במשתנה עזר שלנו יותר גדול מהערך שנמצא בתא של המערך אז אנחנו מכניסים את הערך שבתוך משתנה העזר שלנו לi+1 במקרה שלנו i היה שווה ל 0 ו i+1 יתן לנו את תא מספר 1). המערך שלנו יראה כך:
+      <br>
+      <img src="assest/tableForInsertionSort/8.png" alt="">
+      <br>
+      <br>
+      <br>
+      כעת אנחנו נתחיל את הסבב השלישי שלנו ואנו נכניס לתוך המשתנה temp את הערך שנמצא בתוך תא מספר 3 שזה 3 , כעת נתחיל להשוואות את הערך 3 למה שנמצא בתא מספר 2  שזה הערך 7.
+      <br>
+      <img src="assest/tableForInsertionSort/9.png" alt=""><img src="assest/tableForInsertionSort/10.png" alt="">
+      <br>
+      בגלל ש 3 קטן מ 7 אז אנחנו מבצעים החלפה , 7 ייכנס לתא מספר 3 והמערך שלנו יראה כך:
+      <br>
+      <img src="assest/tableForInsertionSort/11.png" alt="">
+      <br>
+      <br>
+      <br>
+      לאחר מכן אנחנו משווים את הערך 3 לתא מספר 1 שהוא הערך 4. 
+      <br>
+      <img src="assest/tableForInsertionSort/12.png" alt=""><img src="assest/tableForInsertionSort/10.png" alt="">
+      <br>
+      בגלל ש 3 קטן מ 4 אז גם כאן מתבצע שינוי והמערך שלנו יראה כעת כך:
+      <br>
+      <img src="assest/tableForInsertionSort/13.png" alt="">
+      <br>
+      <br>
+      <br>
+      כל עוד הערך בתוך משתנה העזר שלנו תמיד קטן יותר אז אנחנו מכניסים את הערכים של התאים לתוך i+1.  אפשר לראות את זה כמו "הזזה של כל המערך קדימה".
+      <br>
+      לאחר מכן משווים את הערך 3 לערך 2 שנמצא בתוך תא מספר 0. 
+      <br>
+      <img src="assest/tableForInsertionSort/14.png" alt=""><img src="assest/tableForInsertionSort/10.png" alt="">
+      <br>
+      ניתן לראות שהערך 3 גדול מהערך 2 ולכן עוצרים כאן את ההשוואות ומכניסים את הערך 3 לתוך תא מספר 1 וכעת המערך שלנו יראה כך:
+      <br>
+      <img src="assest/tableForInsertionSort/15.png" alt="">
+      <br>
+      <br>
+      <br>
+      כעת אנחנו עושים את הסבב הרביעי שלנו וזה גם יהיה האחרון כי הגענו לסוף המערך , לא קשה לראות ש 8 גדול יותר מכל האיברים במערך ולכן כבר על ההשוואה הראשונה של 8 ל 7 אנחנו נבין שהמערך כבר ממוין ולכן אין צורך להמשיך בהשוואות והמערך הסופי שלנו יראה כך:
+      <br>
+      <img src="assest/tableForInsertionSort/16.png" alt="">
+      <br>
+      וכך מתבצע מיון הכנסה.
+      <br>
+      <br>
+      <br>
+      דוגמה לקוד של מיון הכנסה:
+      <br>
+      <!--CODE
+        void insertion_sort(int *arr , int size)
+        {
+            int  temp , i , j , flag;
+            for(i = 0 ; i < size ; i++)
+            {
+                j = i-1;
+                flag = 1;
+                temp = arr[i];
+                while(j >= 0 && flag == 1)
+                {
+                    if( temp < arr[j] )
+                    {
+                        arr[j+1] = arr[j];
+                    }
+                    else
+                    {
+                        arr[j+1] = temp;
+                        flag =0;
+                    }
+                    j--;
+                }
+            }
+        }
 
-
-
+      END CODE-->
+      <br>
+      •	חשוב לציין שהקוד הזה הוא לא יחיד וקיימות עוד גרסאות עבורו (חלקן אף יעילות יותר) 
+      <br>
+      משתנה ה flag  אומר לנו אם אנחנו הגענו למצב שבו הערך שבתוך המשתנה temp שלנו גדול יותר מכל הערכים של התאים בצד שמאל או לא , במידה וכן אז אנחנו משנים את הערך של flag  לאפס ואז ממשיכים לסבב הבא. במידה ולא אז אנחנו ממשיכים את הבדיקה .
+      i ו j אלו הם האינדקסים שבעזרתם אנחנו זזים במערכים כאשר j מסמל לנו את התא שהערך שלו יכנס למשתנה temp  ו-i  מציין את כל האיברים שאותם אנחנו נשווה ל temp.
+      
 </body>
 
 </html>
