--- a/index.html
+++ b/index.html
@@ -7,14 +7,19 @@
 
   <title>Learning C HomePage</title>
   <link rel="icon" type="image/x-icon" href="assest/favicon.ico" />
-  <link rel="stylesheet" href="css/styles.css" />
+   <!-- CSS -->
+  
+   <!-- Bootstrap Scripts -->
+   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+   integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
+  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="css/index-style.css">
 </head>
 
-<body>
-  <div class="bg">
+<body class="bg">
+ 
     <div class="container">
       <!--Side bar-->
       <nav role='navigation'>
@@ -56,14 +61,11 @@
     </div>
     <!--End of Side bar-->
 
+    <h1 class="head-left">Learning C</h1>
+    <h1 class="head-right">מי אנחנו?</h1>
 
-    <h1 class="top-left">Learning C</h1>
-
-    <h2 class="top-right-head">מי אנחנו?</h2>
-
-    <p class="top-right">
-
-      היי, ברוכים הבאים לאתר שלנו Learning C.
+    <div class="First-Para">
+      <p>היי, ברוכים הבאים לאתר שלנו Learning C.
       <br>
       אנו שלושה סטודנטים מהמכון הטכנולוגי בחולון שמתחילים את שנתם השנייה.
       <br>
@@ -73,7 +75,7 @@
       אז בתור פרויקט לקחנו על עצמנו הכנת אתר זה שמטרתו לעזור לסטודנטים אחרים (ובעצם לכל מי שרוצה ללמוד את הבסיס של שפת
       סי) ללמוד.
       חשוב לנו מאוד לציין, שמדובר בשפה שלא נחשבת לקלה בתור שפה ראשונה, אבל היתרונות שלה על שפת אחרות הוא בכך שכאשר עבודה
-      נעשית בשפת סי היא נעשית ברמה מאוד נמוכה מבחינת המעבד (low level) ובשל כך אנו לומדים קצת יותר טוב מה קורה בתחתית.
+      נעשית בשפת סי היא נעשית ברמה מאוד נמוכה מבחינת המעבד <br>(low level) ובשל כך אנו לומדים קצת יותר טוב מה קורה בתחתית.
       <br>
       <br>
       קצת עלינו:
@@ -85,8 +87,8 @@
       אנזור טוריקאשווילי – מפתח ווב, בעל ציון סופי 89 בקורס "מבוא למדעי המחשב".
       <br>
       קישורים:
-
-  </div>
+      </p>
+    </div>
 
 
 </body>
