--- a/twoDimLoops.html
+++ b/twoDimLoops.html
@@ -14,8 +14,8 @@
   <link rel="stylesheet" href="css/twoDimLoops-style.css">
 </head>
 
-<body>
-  <div class="bg-two">
+<body class="bg-two">
+  <div>
 
     <div class="container">
       <!--Side bar-->
@@ -60,7 +60,7 @@
 
   </div>
 
-  <h1 class="top-left">Learning C</h1>
+  <h1 class="head-left">Learning C</h1>
 
   </div>
 
