--- a/firstProgram.html
+++ b/firstProgram.html
@@ -4,98 +4,101 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
   <title>Learning C FirstProgram</title>
   <link rel="icon" type="image/x-icon" href="assest/favicon.ico" />
-  <link rel="stylesheet" href="css/styles.css" />
+ 
+  <!-- CSS -->
+  
+   <!-- Bootstrap Scripts -->
+   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+   integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="css/styles.css">
   <link rel="stylesheet" href="css/firstprogram-style.css">
-  <link rel="stylesheet" href="css/code.css">
+
+  <!-- Java Script -->
   <script src="js/code.js"></script>
+
+
 </head>
 
-<body>
-  <div class="bg">
-
-    <div class="container">
-      <!--Side bar-->
-      <nav role="navigation">
-        <div id="menuToggle">
-          <input type="checkbox" />
-          <span></span>
-          <span></span>
-          <span></span>
-          <ul id="menu">
-            <a href="index.html" class="w3-bar-item w3-button">מי אנחנו?</a>
-            <a href="firstProgram.html" class="w3-bar-item w3-button">התוכנית הראשונה</a>
-            <a href="variables.html" class="w3-bar-item w3-button">משתנים</a>
-            <a href="printAndScan.html" class="w3-bar-item w3-button">קלט ופלט</a>
-            <a href="mathOperator.html" class="w3-bar-item w3-button">אופרטורים חשבוניים</a>
-            <a href="statments.html" class="w3-bar-item w3-button">משפטי בקרה</a>
-            <a href="oneDimLoops.html" class="w3-bar-item w3-button">לולאות</a>
-            <a href="twoDimLoops.html" class="w3-bar-item w3-button">לולאות דו מימדיות</a>
-            <a href="casting.html" class="w3-bar-item w3-button">קסטינג </a>
-            <a href="sizeOf.html" class="w3-bar-item w3-button">סייז אוף </a>
-            <a href="typeDef.html" class="w3-bar-item w3-button">טייפ דפ</a>
-            <a href="functions.html" class="w3-bar-item w3-button">פונקציות</a>
-            <a href="recursion.html" class="w3-bar-item w3-button">רקורסיות</a>
-            <a href="pointers.html" class="w3-bar-item w3-button">מצביעים</a>
-            <a href="doublePointer.html" class="w3-bar-item w3-button">מצביע כפול</a>
-            <a href="arrays.html" class="w3-bar-item w3-button">מערכים</a>
-            <a href="dinArrays.html" class="w3-bar-item w3-button">מערכים דינאמיים</a>
-            <a href="string.html" class="w3-bar-item w3-button">מחרוזות</a>
-            <a href="binSearch.html" class="w3-bar-item w3-button">חיפוש בינארי</a>
-            <a href="twoDimArrays.html" class="w3-bar-item w3-button">מערכים דו ממדיים</a>
-            <a href="bubbleSort.html" class="w3-bar-item w3-button">מיון בועות</a>
-            <a href="selectionSort.html" class="w3-bar-item w3-button">מיון בחירה</a>
-            <a href="insertionSort.html" class="w3-bar-item w3-button">מיון הכנסה</a>
-            <a href="quickSort.html" class="w3-bar-item w3-button">מיון מהיר</a>
-            <a href="mergeSort.html" class="w3-bar-item w3-button">מיון מיזוג</a>
-          </ul>
-        </div>
-      </nav>
-      <!--End of Side bar-->
-
-
+<body class="bg">
+  <section id="top">
+    <div>
+      <div class="container">
+        <!--Side bar-->
+        <nav role="navigation">
+          <div id="menuToggle">
+            <input type="checkbox" />
+            <span></span>
+            <span></span>
+            <span></span>
+            <ul id="menu">
+              <a href="index.html" class="w3-bar-item w3-button">מי אנחנו?</a>
+              <a href="firstProgram.html" class="w3-bar-item w3-button">התוכנית הראשונה</a>
+              <a href="variables.html" class="w3-bar-item w3-button">משתנים</a>
+              <a href="printAndScan.html" class="w3-bar-item w3-button">קלט ופלט</a>
+              <a href="mathOperator.html" class="w3-bar-item w3-button">אופרטורים חשבוניים</a>
+              <a href="statments.html" class="w3-bar-item w3-button">משפטי בקרה</a>
+              <a href="oneDimLoops.html" class="w3-bar-item w3-button">לולאות</a>
+              <a href="twoDimLoops.html" class="w3-bar-item w3-button">לולאות דו מימדיות</a>
+              <a href="casting.html" class="w3-bar-item w3-button">קסטינג </a>
+              <a href="sizeOf.html" class="w3-bar-item w3-button">סייז אוף </a>
+              <a href="typeDef.html" class="w3-bar-item w3-button">טייפ דפ</a>
+              <a href="functions.html" class="w3-bar-item w3-button">פונקציות</a>
+              <a href="recursion.html" class="w3-bar-item w3-button">רקורסיות</a>
+              <a href="pointers.html" class="w3-bar-item w3-button">מצביעים</a>
+              <a href="doublePointer.html" class="w3-bar-item w3-button">מצביע כפול</a>
+              <a href="arrays.html" class="w3-bar-item w3-button">מערכים</a>
+              <a href="dinArrays.html" class="w3-bar-item w3-button">מערכים דינאמיים</a>
+              <a href="string.html" class="w3-bar-item w3-button">מחרוזות</a>
+              <a href="binSearch.html" class="w3-bar-item w3-button">חיפוש בינארי</a>
+              <a href="twoDimArrays.html" class="w3-bar-item w3-button">מערכים דו ממדיים</a>
+              <a href="bubbleSort.html" class="w3-bar-item w3-button">מיון בועות</a>
+              <a href="selectionSort.html" class="w3-bar-item w3-button">מיון בחירה</a>
+              <a href="insertionSort.html" class="w3-bar-item w3-button">מיון הכנסה</a>
+              <a href="quickSort.html" class="w3-bar-item w3-button">מיון מהיר</a>
+              <a href="mergeSort.html" class="w3-bar-item w3-button">מיון מיזוג</a>
+            </ul>
+          </div>
+        </nav>
+        <!--End of Side bar-->
+      </div>
     </div>
+  </section>
+  <h1 class="head-left">Learning C</h1>
+  <h1 class="head-right">התוכנית הראשונה שלנו</h1>
+  <section class="para">
+    <div class="row">
+      <div class="col-md-6">
 
-  </div>
+        <div class="check">
+          בתוכנית זו נלמד איך מדפיסים למסך <span dir="ltr">hello world</span>: <br>
 
-  <h1 class="top-left">Learning C</h1>
-
-
-  <figure id="code-1">
-
-    <figcaption id="example1-caption">CODE:</figcaption>
-    <pre aria-describedby="example1-description" aria-labelledby="example1-caption" class="line-numbers"><div aria-hidden="true"><span></span><span></span><span></span><span></span><span></span></div><code contenteditable="true" tabindex="0" spellcheck="false"><i>#include</i> <u>&lt;stdio.io&gt;</u>
+          include = פעולה שאומרת בעצם איזה ספרייה לכלול בתוך התוכנית (במקרה שלנו את הספרייה הכללית)<br>
+          stdio.h = הספרייה הכללית (נמצאת בכל תוכנית שלנו)<br>
+          <span dir="ltr">void main()</span> = התוכנית הראשית שלנו – כל הקוד שירוץ בתוכנית שלנו יתחם על ידי סוגריים
+          מסולסלים.<br>
+          <span dir="ltr">printf("")</span> = פעולת הדפסה בסיסית – נרשום את מה שאנו רוצים להדפיס בתוך הגרשיים שבתוך
+          הסוגריים.
+        </div>
+      </div>
+      <div class="col-md-6">
+        <figure class="code">
+          <figcaption id="example1-caption">CODE:</figcaption>
+          <pre aria-describedby="example1-description" aria-labelledby="example1-caption" class="line-numbers"><div aria-hidden="true"><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span></div><code contenteditable="true" tabindex="0" spellcheck="false"><i>#include</i> <u>&lt;stdio.h&gt;</u>
 <b>void</b> main()
 {
   printf(<u>"Hello World!"</u>);
 }
-      </code></pre>
-  </figure>
+          </code></pre>
+        </figure>
+      </div>
 
-  <h1 class="top-right-head">התוכנית הראשונה שלנו</h1>
+    </div>
 
-  <p class="top-right">
-
-    בתוכנית זו נלמד איך מדפיסים למסך  <span dir="ltr">hello world:</span>
-    <br>
-    include = פעולה שאומרת בעצם איזה ספרייה לכלול בתוך התוכנית (במקרה שלנו את הספרייה הכללית)
-    <br>
-    stdio.h = הספרייה הכללית (נמצאת בכל תוכנית שלנו)
-    <br>
-    <span dir="ltr">void main()</span> = התוכנית הראשית שלנו – כל הקוד שירוץ בתוכנית שלנו יתחם על ידי סוגריים מסולסלים
-    <br>
-    <span dir="ltr">printf("")</span> = פעולת הדפסה בסיסית – נרשום את מה שאנו רוצים להדפיס בתוך הגרשיים שבתוך הסוגריים.
-    
-
-  </p>
-
-
-  </div>
-
+  </section>
 
 </body>
 
